Bug 125919 - Rendering's artifact in Autofilter drop-down widget
Summary: Rendering's artifact in Autofilter drop-down widget
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: All Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.4.0 target:6.3.0.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks: AutoFilter
  Show dependency treegraph
 
Reported: 2019-06-14 11:13 UTC by Roman Kuznetsov
Modified: 2019-06-28 16:12 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Artifact in Autofilter (33.07 KB, image/jpeg)
2019-06-14 11:15 UTC, Roman Kuznetsov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Kuznetsov 2019-06-14 11:13:33 UTC
Description:
Rendering's artifact in Autofilter drop-down widget (see attach)

It's regression from Miklos's fixing on bug 101086

Steps to Reproduce:
1. Open https://bugs.documentfoundation.org/attachment.cgi?id=152066
2. Open Autofilter drop-down widget
3. Look at first letter in first top label (see screenshot)

Actual Results:
there is an artifact

Expected Results:
widget looks fine


Reproducible: Always


User Profile Reset: No



Additional Info:
Comment 1 Roman Kuznetsov 2019-06-14 11:14:45 UTC
Version: 6.4.0.0.alpha0+ (x86)
Build ID: 58ef8c188b6bb2ed307f5e825cc7e475c33d0c33
CPU threads: 4; OS: Windows 6.1; UI render: default; VCL: win; 
TinderBox: Win-x86@42, Branch:master, Time: 2019-06-13_23:21:24
Locale: ru-RU (ru_RU); UI-Language: en-US
Calc: threaded
Comment 2 Roman Kuznetsov 2019-06-14 11:15:32 UTC
Created attachment 152191 [details]
Artifact in Autofilter
Comment 3 V Stuart Foote 2019-06-14 11:38:54 UTC
Confirming on Windows 10 64-bit en-US (1809) with Intel HD Graphics 620 and
Version: 6.4.0.0.alpha0+ (x64)
Build ID: 5e6af47dc87a55fea595c952ea3e59c93d0620db
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2019-06-13_02:23:01
Locale: en-US (en_US); UI-Language: en-US
Calc: threaded

the visual glitch is not visible with OpenGL rendering enabled, but is present with default (CPU or HA) rendering
Comment 4 Miklos Vajna 2019-06-14 11:50:27 UTC
I think it would make sense to bisect this one, it's not obvious to me what is the problem here.

Could you state a version where this was good?

Also, does this depend on text scaling (100% vs 125% e.g.) or it doesn't matter?
Comment 5 Mike Kaganski 2019-06-14 12:55:36 UTC
(In reply to Miklos Vajna from comment #4)
> Also, does this depend on text scaling (100% vs 125% e.g.) or it doesn't
> matter?

Reproducible with 100%, and with 150% scaling.
Comment 6 Aron Budea 2019-06-15 03:28:22 UTC
(In reply to Miklos Vajna from comment #4)
> I think it would make sense to bisect this one, it's not obvious to me what
> is the problem here.
> 
> Could you state a version where this was good?
I reverted the commits in bug 125814, bug 125791 and bug 101086, and tested after each, and the bug only disappeared with the revert of bug 101086's fix. Reverted commits in order:

https://git.libreoffice.org/core/+/7aaa7212f2f37606b34d44a039398f05c02d5660%5E%21
https://git.libreoffice.org/core/+/47dbbe214641b9a28871d0c82f71b2afb9c5943c%5E%21
https://git.libreoffice.org/core/+/4dadbff74eff5f8ad00df99c659f8a2b914e09a1%5E%21

6.4 Win bibisect builds should be ready in a few days, the result can be double-checked then.
Comment 7 Xisco Faulí 2019-06-26 11:14:00 UTC
I can't reproduce it in

Version: 6.4.0.0.alpha0+ (x64)
Build ID: fe855eda54faf6196ad9dea12d8dc090b6d6c1da
CPU threads: 16; OS: Windows 6.3; UI render: default; VCL: win; 
Locale: en-GB (en_GB); UI-Language: en-US
Calc: threaded

@Aron, the 6.4 bisect repo is ready in https://gerrit.libreoffice.org/#/admin/projects/bibisect-win64-6.4, could you please double check your findings...
Comment 8 Aron Budea 2019-06-27 00:28:10 UTC
(In reply to Aron Budea from comment #6)
> https://git.libreoffice.org/core/+/
> 4dadbff74eff5f8ad00df99c659f8a2b914e09a1%5E%21
I can confirm the bug was introduced by this commit.

(In reply to Xisco Faulí from comment #7)
> @Aron, the 6.4 bisect repo is ready in
> https://gerrit.libreoffice.org/#/admin/projects/bibisect-win64-6.4, could
> you please double check your findings...
Yes, my experience is the same, the bug is gone. The reverse bibisect traced back the fix to the following commit. Thanks, Jan-Marek!

https://cgit.freedesktop.org/libreoffice/core/commit/?id=4a478227f5af8322164ecce66fd056e9bf2eac89
author		Jan-Marek Glogowski <glogow@fbihome.de>	2019-06-16 14:19:09 +0000
committer	Jan-Marek Glogowski <glogow@fbihome.de>	2019-06-18 20:27:49 +0200

"VCL cleanup WidgetDrawInterface"

The only question is, considering bug 101086's fix is in 6.3, could the relevant piece of this commit be identified, and backported to 6.3 as well?
Comment 9 Commit Notification 2019-06-28 15:18:50 UTC
Jan-Marek Glogowski committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/+/201fbc259cdbd49f0135dae41533693359f821d2%5E%21

tdf#125919 VCL cleanup WidgetDrawInterface

It will be available in 6.3.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.